- Configurable aliases for /team and /teama command (for example /clan) (https://github.com/booksaw/BetterTeams/issues/42)
- Players can be referenced by @a and @p (https://github.com/booksaw/BetterTeams/issues/41)
- Added spam killing prevention to stop score farming (https://github.com/booksaw/BetterTeams/issues/43)
	
Improvements:
- Full Polish translation is now avaliable (https://github.com/booksaw/BetterTeams/issues/48)
- Added a way to use player name instead of player display name in team/ally chat (https://github.com/booksaw/BetterTeams/issues/49)
- Added placeholder support for chat prefixing (https://github.com/booksaw/BetterTeams/issues/45)
- Teams can be referenced by a player within them instead of just in commands (https://github.com/booksaw/BetterTeams/issues/41)

Bug Fixes: 
- Baltop Holo sorts after score not balance (https://github.com/booksaw/BetterTeams/issues/46)

3.1.17
Improvements: 
- Added ! to send a message to global chat while in team or ally chat (#53)

Bug Fixes: 
- Fixed bug causing a server crash if a team name was too long
- Fixed bug causing incorrect arguments for /team title (#50)
- Fixed bug about permissions for the command /team pvp (#52)

3.1.18
Improvements: 
- Placeholders are now allowed within placeholders
- Currency symbols are allowed within placeholders

Bug fixes:
- Fixed a bug causing servers to crash
- Fixed a bug with /team rank

3.1.19
Improvements: 
- Associated maxWarps with team level (#54)

Bug fixes: 
- Fixed a problem with /team promote causing error messages
- Fixed space after Team name (#58)
- Fixed Config version wrong (#61)
- Fixed maxWarps cannot be set to -1 
- Fixed Team names above 5 characters lose space (#62)
- Fixed Deleting betterteams does not remove scoreboard teams correctly (#60)
- Fixed /teama not working  (#56)

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
