@@ -91,6 +91,7 @@ info.level: '&6Level: &b%s'
 info.owner: '&6Owners: &b%s'
 info.admin: '&6Admins: &b%s'
 info.default: '&6Members: &b%s'
+info.tag: '&6Tag: &b%s'
 # for /team title <player/me> <title>
 info.fail: '&6No team or player found under that name'
 info.score: '&6Score: &b%s'
@@ -205,6 +206,11 @@ rankup.max: '&4You are already the max rank'
 rankup.score: '&4You need %s score to rankup'
 rankup.money: '&4You need %s money in the team balance to rankup'
 rankup.success: '&6Your team has leveled up'
+
+tag.banned: '&4That tag is banned'
+tag.success: '&6Your tag has successfully changed'
+tag.maxLength: '&4That tag is too long'
+admin.tag.success: '&6That teams tag successfully changed'
 
 admin.setrank.success: '&6That teams rank has been set'
 admin.setrank.no: '&4That rank either does not exist or is not setup correctly'
